--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "Webcam-driven QR code scanner.",
   "main": "lib/index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "preinstall": "npx npm-force-resolutions"
   },
   "files": [
     "src/"
@@ -41,6 +42,9 @@
     "gulp-uglify": "^3.0.0",
     "vinyl-buffer": "^1.0.0",
     "vinyl-source-stream": "^1.1.0"
+  },
+  "resolutions": {
+    "graceful-fs": "4.2.3"
   },
   "dependencies": {
     "babel-runtime": "^6.26.0",
